; ModuleID = '/home/carl/AnghaBench/ish/util/extr_fifo.c_fifo_init.c'
source_filename = "/home/carl/AnghaBench/ish/util/extr_fifo.c_fifo_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fifo = type { i64, i64, i64, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fifo_init(%struct.fifo* %0, i64 %1) #0 {
  %3 = alloca %struct.fifo*, align 8
  %4 = alloca i64, align 8
  store %struct.fifo* %0, %struct.fifo** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = call i32 @malloc(i64 %5)
  %7 = load %struct.fifo*, %struct.fifo** %3, align 8
  %8 = getelementptr inbounds %struct.fifo, %struct.fifo* %7, i32 0, i32 3
  store i32 %6, i32* %8, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load %struct.fifo*, %struct.fifo** %3, align 8
  %11 = getelementptr inbounds %struct.fifo, %struct.fifo* %10, i32 0, i32 0
  store i64 %9, i64* %11, align 8
  %12 = load %struct.fifo*, %struct.fifo** %3, align 8
  %13 = getelementptr inbounds %struct.fifo, %struct.fifo* %12, i32 0, i32 1
  store i64 0, i64* %13, align 8
  %14 = load %struct.fifo*, %struct.fifo** %3, align 8
  %15 = getelementptr inbounds %struct.fifo, %struct.fifo* %14, i32 0, i32 2
  store i64 0, i64* %15, align 8
  ret void
}

declare dso_local i32 @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
